@@ -12,27 +12,11 @@ jimport( 'joomla.application.component.view');
 
 /**
  * HTML View class for the Login component
- * 
+ *
  * @package		Joomla.Administrator
  * @subpackage	com_login
  * @since		1.6
  */
 class LoginViewLogin extends JView
 {
-	protected $_module = null;
-
-	/**
-	 * Execute and display a template script.
-	 * 
-	 * @param 	string	$tpl	The name of the template file to parse;
-	 * @return	void
-	 */
-	public function display($tpl = null)
-	{
-		$_module = &JModuleHelper::getModule('login');
-
-		$this->assignRef('module', $_module);
-
-		parent::display($tpl);
-	}
 }
